--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Zakaria touhadi <touhadi.zakaria@gmail.com>
+Issmaile Illa
